--- a/MyCity4Kids/MyCity4Kids/res/values-bn/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-bn/strings.xml
@@ -495,10 +495,10 @@
     <string name="upload_video.desc1">Shoot the video and upload it right away from your Mobile.</string>
     <string name="upload_video.get_started">LET\'S START</string>
 
-    <string name="moderation_or_share.way_to_go">WAY TO GO!</string>
+    <string name="moderation_or_share.way_to_go">প্রশংসনীয়</string>
     <string name="moderation_or_share.moderation_message">Your article is up for moderation. You\'ll receive an email within 24 hours regarding the status of the blog</string>
-    <string name="moderation_or_share.publish_message">Congrats! Your blog has been published.\n Share it with your friends and family.</string>
-    <string name="moderation_or_share.later">MAYBE LATER</string>
+    <string name="moderation_or_share.publish_message">অভিনন্দন ! আপনার ব্লগ পাবলিশ হয়ে গেছে। বন্ধু ও পরিবারের সাথে এটিকে শেয়ার করে নিন</string>
+    <string name="moderation_or_share.later">হয়তো পরে</string>
     <string name="moderation_or_share.okay">ঠিক আছে</string>
     <string name="moderation_or_share.gplus_fail">Unable to share with google plus.</string>
     <string name="moderation_or_share.whatsapp_fail">Unable to share with whatsapp.</string>
@@ -507,7 +507,7 @@
     <string name="moderation_or_share.insta_not_installed">Instagram has not been installed.</string>
     <string name="moderation_or_share.twitter_fail">Unable to share with twitter.</string>
 
-    <string name="complete_blogger_profile.complete_label">COMPLETE YOUR BLOGGERS PROFILE</string>
+    <string name="complete_blogger_profile.complete_label">আপনার ব্লগার প্রোফাইলটি সম্পূর্ণরূপে ভর্তি করুন</string>
     <string name="complete_blogger_profile.paid_eligibility">বেতনমূলক লেখার উপযুক্ত হতে.\n All this information is safe with us.</string>
     <string name="complete_blogger_profile.save">সংরক্ষিত</string>
     <string name="complete_blogger_profile.incorrect_date">Please choose correct date for date of birth.</string>
@@ -852,4 +852,8 @@
     <string name="challenge_write_story_for_this_picture">এই ছবিটিকে কেন্দ্র করে আপনার গল্প লিখুন</string>
     <string name="choose_challenge_label">গল্প লেখার চ্যালেঞ্জ নিন</string>
     <string name="start_writing">লেখা শুরু করুন</string>
+
+    <string name="male">পুরুষ</string>
+    <string name="female">মহিলা</string>
+    <string name="DOB">জন্ম তারিখ</string>
 </resources>
