--- a/MyCity4Kids/MyCity4Kids/res/values-te/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-te/strings.xml
@@ -850,4 +850,8 @@
     <string name="challenge_write_story_for_this_picture">Write Your Story Around This Picture</string>
     <string name="choose_challenge_label">TAKE A CHALLENGE</string>
     <string name="start_writing">Start Writing</string>
+
+    <string name="male">Male</string>
+    <string name="female">Female</string>
+    <string name="DOB">Date Of Birth</string>
 </resources>
