ui changes momvlogs

--- a/MyCity4Kids/MyCity4Kids/res/values/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values/strings.xml
@@ -898,9 +898,9 @@
     <string name="this_week_challenge">This Week\'s Challenge</string>
     <string name="previous_week_challenge">Previous Week\'s Challenges</string>
     <string name="what_is_your_story">WHAT\'S YOUR 100 WORD STORY</string>
-    <string name="use_picture_word_to_write_one">Use The Picture ,Word, Phrase Or video Given Blow To Write One</string>
+    <string name="use_picture_word_to_write_one">Use The Picture ,Word, Phrase Or Video Given Below To Write One</string>
     <string name="challenge_write_story_for_this_picture">Write Your Story Around This Picture</string>
-    <string name="choose_challenge_label">TAKE A CHALLENGE</string>
+    <string name="choose_challenge_label">TAKE THE CHALLENGE</string>
     <string name="start_writing">Start Writing </string>
 
     <string name="male">Male</string>
