new bug fixes after 9.8 release

--- a/MyCity4Kids/MyCity4Kids/res/values-bn/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-bn/strings.xml
@@ -856,4 +856,6 @@
     <string name="male">পুরুষ</string>
     <string name="female">মহিলা</string>
     <string name="DOB">জন্ম তারিখ</string>
+
+    <string name="add">যোগ</string>
 </resources>
