--- a/MyCity4Kids/MyCity4Kids/res/values-hi/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-hi/strings.xml
@@ -866,4 +866,6 @@
     <string name="male">पुरुष</string>
     <string name="female">महिला</string>
     <string name="DOB">जन्म तिथि</string>
+
+    <string name="add">ऐड करें</string>
 </resources>
