--- a/MyCity4Kids/MyCity4Kids/res/values-kn/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-kn/strings.xml
@@ -906,5 +906,5 @@
     <string name="female">ಸ್ತ್ರೀ</string>
     <string name="DOB">ಹುಟ್ಟಿದ ದಿನ</string>
 
-
+    <string name="add">ಸೇರಿಸಿ</string>
 </resources>
