--- a/MyCity4Kids/MyCity4Kids/res/values-ml/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-ml/strings.xml
@@ -904,4 +904,6 @@
     <string name="male">പുരുഷൻ</string>
     <string name="female">സ്ത്രീ</string>
     <string name="DOB">ജനനത്തീയതി</string>
+
+    <string name="add">ചേർക്കുക</string>
 </resources>
