--- a/MyCity4Kids/MyCity4Kids/res/values-te/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-te/strings.xml
@@ -854,4 +854,7 @@
     <string name="male">Male</string>
     <string name="female">Female</string>
     <string name="DOB">Date Of Birth</string>
+
+
+    <string name="add">జోడించు</string>
 </resources>
