--- a/MyCity4Kids/MyCity4Kids/res/values/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values/strings.xml
@@ -929,4 +929,6 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="add_website">ADD WEBSITE</string>
     <string name="slide_to_cancel">Slide to cancel</string>
+
+    <string name="add">ADD</string>
 </resources>
